# deterministic-fighting-game

./: .editorconfig  .gitignore  CODE_AUDIT_REPORT.md  COMMERCIAL_ROADMAP.md  CRITICAL_FIXES_SUMMARY.md  DEVELOPMENT_GUIDE.md  INTEGRATION_GUIDE.md  PHASE1_COMPLETE.md  PROJECT_REPORT.md  PROJECT_STATUS.md  README.md  TODO.md  UNITY_SETUP.md  build-test.ps1  game.txt  run-test.bat  test-determinism.ps1  test-dotnet.ps1  test-integration-simple.ps1  test-integration.ps1  test-simple.bat  test.ps1
godot/: project.godot
godot/Assets/Scenes/: Main.tscn
programs/combo_mint/: Cargo.toml
programs/combo_mint/src/: lib.rs
scripts/: README.md  clean.ps1  test-integration-minimal.bat  test-integration.ps1  test-minimal.ps1
src/: SimRunner.cs
src/Prototype/: FightingPrototype.cs  Phase2Test.cs  PrototypeTest.cs
src/bridge/: BattleManager.cs
src/engine/core/: Enums.cs  FixedMath.cs  GameState.cs  InputFrame.cs  PlayerState.cs  ProjectileState.cs  StateHash.cs
src/engine/data/: ActionDef.cs  ActionLibrary.cs  ActionLoader.cs  CharacterDef.cs  JasonDef.cs  JasonMoveSet.cs
src/engine/sim/: CombatHardening.cs  CombatResolver.cs  MapData.cs  PhysicsSystem.cs  ProjectileSystem.cs  Simulation.cs
src/environment/: StageEnvironment.cs
src/net/: RollbackController.cs
src/specs/: combat_contract.json
src/trading/: Integration.cs  Program.cs  README.md  appsettings.Development.json  appsettings.json  windows-service.xml
src/trading/api/: TradingController.cs
src/trading/core/: TradingEngine.cs
tests/Core/: FixedMathTests.cs  InputFrameTests.cs
(+27 files in other folders)
